# criner

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: waste-report-incorrect.md
.github/workflows/: release.yml  rust.yml
criner/: CHANGELOG.md  Cargo.toml  README.md
criner-waste-report/: CHANGELOG.md  Cargo.toml  README.md
criner-waste-report/src/: html.rs  lib.rs  result.rs
criner-waste-report/src/test/: from_package.rs  mod.rs
criner-waste-report/tests/fixtures/: avr_libc-0.1.3extract_crate-1.0.0.package.rmp  cookie_factory-0.3.1-extract_crate-0.3.1.package.rmp  curl_sys-0.4.27-extract_crate-1.0.0.package.rmp  gnir-0.14.0-alpha3-extract_crate-1.0.0.package.rmp  grpcio-sys-0.5.0_extract_crate-1.0.0.package.rmp  lw_webdriver-0.4.1-extract_crate-1.0.0.package.rmp  ripgrep-12.0.0-extract_crate-1.0.0.package.rmp  threed-ice-sys-0.3.0-extract_crate-1.0.0.package.rmp
criner/examples/: rmpserde_roundtrip.rs
criner/src/: error.rs  export.rs  lib.rs  migration.rs  model.rs  persistence.rs  smol.rs  spawn.rs  utils.rs
criner/src/engine/: changes.rs  mod.rs  run.rs  worker.rs
criner/src/engine/report/: generic.rs  mod.rs  waste.rs
criner/src/engine/report/waste/: merge.rs  mod.rs  report.rs  report_from_extract_crate_test.rs  report_test.rs
criner/src/engine/report/waste/report/: criner.rs  from_extract_crate_test.rs  html.rs  merge.rs  mod.rs  result.rs
criner/src/engine/report/waste/report_test/: from_extracted_crate.rs  merge.rs  mod.rs
criner/src/engine/stage/: changes.rs  db_download.rs  mod.rs  processing.rs  report.rs  tasks.rs
criner/src/engine/stage/db_download/: convert.rs  csv_model.rs  from_csv.rs  mod.rs  model.rs
criner/src/engine/stage/report/: git.rs  mod.rs
criner/src/engine/work/: cpubound.rs  general.rs  generic.rs  iobound.rs  mod.rs  outputbound.rs  schedule.rs  simple.rs
criner/src/export/: mod.rs  run.rs
criner/src/export/to_sql/: dbdump_crate.rs  krate.rs  krate_version.rs  meta.rs  mod.rs  result.rs  task.rs
criner/src/persistence/: keyed.rs  merge.rs  mod.rs  serde.rs  sled_tree.rs  table.rs  tree.rs
criner/tests/fixtures/: avr_libc-0.1.3extract_crate-1.0.0.rmp  cookie_factory-0.3.1-extract_crate-0.3.1.rmp  curl_sys-0.4.27-extract_crate-1.0.0.rmp  deno_typescript-0.36.0-extract_crate-1.0.0.package.rmp  deno_typescript-0.36.0-extract_crate-1.0.0.rmp  falcon_raptor-0.4.9-extract_crate-1.0.0.package.rmp  falcon_raptor-0.4.9-extract_crate-1.0.0.rmp  fermium-20.12.0-alpha2-extract_crate-1.0.0.package.rmp  fermium-20.12.0-alpha2-extract_crate-1.0.0.rmp  gnir-0.14.0-alpha3-extract_crate-1.0.0.rmp  grpcio-sys-0.5.0_extract_crate-1.0.0.rmp  lw_webdriver-0.4.1-extract_crate-1.0.0.rmp  mozjs_sys-0.67.1-extract_crate-1.0.0.package.rmp  mozjs_sys-0.67.1-extract_crate-1.0.0.rmp  openblas_provider-0.4.0-extract_crate-1.0.0.package.rmp  openblas_provider-0.4.0-extract_crate-1.0.0.rmp  ripgrep-12.0.0-extract_crate-1.0.0.rmp  sovrin-client.0.1.0-179-extract_crate-1.0.0.package.rmp  sovrin-client.0.1.0-179-extract_crate-1.0.0.rmp  threed-ice-sys-0.3.0-extract_crate-1.0.0.rmp
src/: args.rs  error.rs  lib.rs  main.rs  utils.rs
src/engine/: tasks.rs
