[package]
name = "criner-cli"
version = "0.1.2"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
description = "A command-line interface for the 'Criner' crates mining platform"
license = "MIT"
repository = "https://github.com/the-lean-crate/criner"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[[bin]]
name = "criner"
path = "src/main.rs"
doctest = false

[features]
default = []
migration = ["criner/migration"]

[lib]
doctest = false

[dependencies]
clap = {version = "2", features = ["color"]}
structopt = "0.3.9"
humantime = "2.0.0"
time = "0.2.9"
criner = { version = "0.1.0", path = "./criner" }
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }

[workspace]
members = ["criner", "criner-waste-report"]

# Turn on when needed to have faster debug builds
[profile.dev.package."*"]
debug = false

# We need fast regex for tests
[profile.test.package."*"]
debug = false
opt-level = 2

[profile.release]
# uncomment this when things stabilize - increase build times, but potentially make faster binaries
#lto = "fat"
#codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = true
