[package]
name = "criner-waste-report"
version = "0.1.1"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
description = "Determine include directives for Cargo.toml files to slim down a crate"
license = "MIT"
repository = "https://github.com/the-lean-crate/criner"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md", "!**/test/*"]

[lib]
doctest = false

[features]
default = ["html", "with-serde"]
html = ["horrorshow", "bytesize", "dia-semver", "humantime"]
with-serde = ["serde_derive", "serde"]

[dependencies]
toml = "0.5.6"
globset = "0.4.4"
regex = "1.3.4"
lazy_static = "1.4.0"

# serializable datastructures
serde_derive = { version = "1.0.104", optional = true }
serde = { version = "1.0.104", optional = true }

# for html
horrorshow = { version = "0.8.1", optional = true }
bytesize = { version = "1.0.0", optional = true }
dia-semver = { version = "8.0.1", optional = true }
humantime = { version = "2.0.0", optional = true }

[dev-dependencies]
rmp-serde = "0.14.0"
