[package]
name = "criner-waste-report"
version = "0.1.4"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
description = "Determine include directives for Cargo.toml files to slim down a crate"
license = "MIT"
repository = "https://github.com/the-lean-crate/criner"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md", "!**/test/**/*"]

[lib]
doctest = false

[features]
default = ["html"]
html = ["horrorshow", "bytesize", "dia-semver", "humantime"]

[dependencies]
serde_derive = "1.0.104"
serde = "1.0.104"
toml = "0.5.6"
globset = "0.4.4"
regex = "1.3.4"
lazy_static = "1.4.0"

# for html
horrorshow = { version = "0.8.1", optional = true }
bytesize = { version = "1.0.0", optional = true }
dia-semver = { version = "9.0.0", optional = true }
humantime = { version = "2.0.0", optional = true }

[dev-dependencies]
rmp-serde = "1.0.0"
