[package]
name = "criner"
version = "0.1.2"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
description = "a platform for resumable mining of crates.io for knowledge and information"
include = ["src/**/*", "!**/*_test/*", "Cargo.*", "README.md", "LICENSE.md"]
license = "MIT"
repository = "https://github.com/the-lean-crate/criner"
readme = "README.md"

[features]
default = []
migration = ["jwalk"]

[lib]
doctest = false

[dependencies]
quick-error = "1.2.3"
futures = { version = "0.3.4", features = ["thread-pool"]}
futures-timer = "3.0.1"
crates-index-diff = "7.0.0"
prodash = { version = "3.6.0", default-features = false, features = ["tui-renderer", "log-renderer", "localtime"] }
rmp-serde = "0.14.0"
serde_derive = "1.0.104"
serde = "1.0.104"
humantime = "2.0.0"
log = "0.4.8"
async-std = { version = "1.5.0", features = ["unstable"] }
reqwest = { version = "0.10.1", features = ["gzip"] }
http = { version = "0.2.0", default-features = false }
tokio = { version = "0.2", default-features = false, features = ["rt-threaded"]}
jwalk = { version = "0.4.0", optional = true }
tar = "0.4.26"
libflate = "0.1.27"
bytesize = "1.0.0"
rmpv = "0.4.4"
rusqlite = { version = "0.21.0", features = ["bundled", "unlock_notify"] }
parking_lot = "0.10.0"
async-trait = "0.1.24"
dia-semver = "8.0.1"
# For scheduling the cron-like download of the crates.io db using local time declarations
time = "0.2.9"

# for parsing csv files contained in crates-db-download
csv = "1.1.3"
# for deleting old database dumps - they remain on disk for a day at most
glob = "0.3.0"

# For 'export' functionality only (embed json in SQL text for simplicity) and for some fields in crates-io csv download
serde_json = "1.0.48"

# For waste report computation and html generation
toml = "0.5.6"
globset = "0.4.4"
horrorshow = "0.8.1"
regex = "1.3.4"
lazy_static = "1.4.0"
flume = "0.7.1"

[dev-dependencies]
common_macros = "0.1.1"

