[package]
name = "criner"
version = "0.3.0"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
description = "a platform for resumable mining of crates.io for knowledge and information"
license = "MIT"
repository = "https://github.com/the-lean-crate/criner"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md", "!**/*_test/*"]

[features]
default = []
migration = ["jwalk"]

[lib]
doctest = false

[dependencies]
quick-error = "2.0.0"
futures-util = { version = "0.3.5", default-features = false, features = ["io", "sink"]}
crates-index-diff = "7.0.0"
prodash = { version = "11.0.0", default-features = false, features = ["render-tui", "render-tui-termion", "localtime", "progress-tree", "progress-tree-log"] }
rmp-serde = "0.14.0"
serde_derive = "1.0.104"
serde = "1.0.104"
humantime = "2.0.0"
log = "0.4.8"
reqwest = { version = "0.10.1", features = ["gzip"] }
http = { version = "0.2.0", default-features = false }
jwalk = { version = "0.4.0", optional = true }
tar = "0.4.26"
libflate = "1.0.0"
bytesize = "1.0.0"
rmpv = "0.4.4"
rusqlite = { version = "0.24.0", features = ["bundled", "unlock_notify"] }
parking_lot = "0.11.0"
async-trait = "0.1.24"
dia-semver = "8.0.1"
num_cpus = "1.13.0"
multitask = "0.2.0"
once_cell = "1.4.0"
futures-lite = "1.4.0"
blocking = "1.0.0"
async-io = "1.0.0"
parking = "2.0.0"
async-channel = "1.1.1"
tokio = { version = "0.2.22", default-features = false, features = ["rt-threaded"]}
# for properly shutting down the GUI when SIGTERM is sent directly
ctrlc = { version = "3.1.4", features = ["termination"] }
# For scheduling the cron-like download of the crates.io db using local time declarations
time = "0.2.9"

# for parsing csv files contained in crates-db-download
csv = "1.1.3"
# for deleting old database dumps - they remain on disk for a day at most
glob = "0.3.0"

# For 'export' functionality only (embed json in SQL text for simplicity) and for some fields in crates-io csv download
serde_json = "1.0.48"

# For waste report computation and html generation
toml = "0.5.6"
globset = "0.4.4"
horrorshow = "0.8.1"
regex = "1.3.4"
lazy_static = "1.4.0"
criner-waste-report = { version = "0.1.0", path = "../criner-waste-report" }

[dev-dependencies]
common_macros = "0.1.1"

